# TamangNetra

./: .gitignore  DEVELOPER_GUIDE.md  Makefile  contract.md  docker-compose.yml  readme.md
backend/: .env.example  .gitignore  Dockerfile  config.py  knowledge_graph_cache.json  main.py  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/routes/: health.py  ocr.py  translate.py  youtube.py
backend/app/: __init__.py  main.py
backend/app/api/routes/: document.py  health.py  ocr.py  pii.py  translation.py  youtube.py  youtube_proxy.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: document.py  ocr.py  translation.py
backend/app/services/pdf/: extractor.py  native_reconstructor.py  ocr.py  reconstructor.py
backend/app/services/pdf/high_fidelity/: extractor.py  reconstructor.py  translator.py
backend/app/utils/: encryption.py  pii_detector.py
backend/lib/: contracts.py  crypto.py  glossary.py  pdf_engine.py  pii.py  sentence_splitter.py  translator.py  validator.py
backend/processors/: csv_processor.py  docx_processor.py  image_processor.py  pdf_processor.py
backend/routers/: job.py  jobs.py  pdf.py  scrub.py  translate.py
backend/services/: glossary.py  sentence_splitter.py  translator.py
backend/tests/: conftest.py  test_encryption.py  test_health.py  test_pii.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/asr/: route.ts
frontend/app/api/assistant/: route.ts
frontend/app/api/download/: route.ts
frontend/app/api/export-bilingual/: route.ts
frontend/app/api/process-file/: route.ts
frontend/app/api/reconstruct/: route.ts
frontend/app/api/stats/: route.ts
frontend/app/api/translate/: route.ts
frontend/app/api/tts/: route.ts
frontend/app/api/youtube/: route.ts
frontend/app/lib/: crypto.tsx
frontend/app/test-crypto/: page.tsx
frontend/src/components/examples/: OCRExample.tsx  PIIDetectorExample.tsx  TranslationExample.tsx
frontend/src/components/tamangnetra/: AboutSection.tsx  AccessibilityPanel.tsx  BatchTranslator.tsx  BilingualExport.tsx  Book3DView.tsx  BoundingBoxAdjuster.tsx  CommunitySection.tsx  ConfidenceHeatmap.tsx  DemoMode.tsx  DocumentPreview.tsx  EnhancedEmptyStates.tsx  ExportSettingsDialog.tsx  FAQSection.tsx  FeatureBadges.tsx  FileTranslator.tsx  GlossaryManager.tsx  Hero.tsx  HeroSection.tsx  HowItWorks.tsx  (+38 more)
frontend/src/hooks/: use-encryption.ts  use-pii-translation.ts  use-toast.ts
frontend/src/lib/: api-client.ts  encryption.ts  knowledge-graph.ts  pii-detector.ts  rate-limiter.ts  sentence-splitter.ts
scripts/: start.sh
tamangnetra-backend/: requirements.txt
tamangnetra-frontend/: index.html  package-lock.json  package.json
tamangnetra-frontend/src/: App.jsx
tamangnetra-frontend/src/components/: AudioButton.jsx  LanguageSelector.jsx  PenTool.jsx  ProgressScreen.jsx  ResultViewer.jsx  UploadZone.jsx
tamangnetra-frontend/src/hooks/: useWebSocket.js
tamangnetra-frontend/src/utils/: encryption.js  tamangFacts.js
(+6 files in other folders)
