[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamangletra-backend"
version = "0.1.0"
description = "TamangNetra Backend API - Trilingual translation service with PII detection, encryption, and OCR"
requires-python = ">=3.10"
authors = [{name = "TamangNetra Team"}]

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "pydantic==2.7.4",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "aiofiles==23.2.1",
    # Database
    "sqlalchemy==2.0.34",
    "asyncpg==0.30.0",
    "alembic==1.13.2",
    # Encryption & Security
    "cryptography==42.0.8",
    "pycryptodome==3.20.0",
    # NLP & Translation
    "requests==2.31.0",
    "langchain==0.1.17",
    "langchain-community==0.0.38",
    # Media Processing
    "pillow==10.2.0",
    "pydub==0.25.1",
    # Speech & Audio
    "librosa==0.10.1",
    "soundfile==0.12.1",
    # OCR
    "pytesseract==0.3.10",
    "opencv-python==4.9.0.80",
    # Data Processing
    "pandas==2.2.1",
    "numpy==1.26.4",
    # Utilities
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "celery==5.3.6",
    # Logging & Monitoring
    "python-json-logger==2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "black==24.3.0",
    "ruff==0.3.8",
    "mypy==1.10.0",
    "httpx==0.27.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
