[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tamangletra-backend"
version = "0.1.0"
description = "TamangNetra Backend API - Trilingual translation service"
requires-python = ">=3.10"
authors = [{name = "TamangNetra Team"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv==1.0.1",
    "httpx==0.27.0",
    "aiofiles==23.2.1",
    "pycryptodome>=3.20.0",
    "requests==2.31.0",
    "pillow>=11.0.0",
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.10.0",
    "pandas>=2.2.2",
    "numpy>=2.1.0",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0.7",
    "pymupdf>=1.24.1",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.2",
    "reportlab",
    "pdfplumber",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "black>=24.3.0",
    "ruff>=0.3.8",
    "mypy>=1.10.0",
    "httpx==0.27.0",
]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
